More user input

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Down payment slider !-->
 	<div id="slider">
 		<b id="back">Down Payment: </b>
-		<label id="varry"></label>
+		<input id="varry" value="0" type="text"></input>
   		<div id="custom-handle" class="ui-slider-handle"></div>
 	</div><br />
 	<!-- interest slider !-->
