--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 	<div>
 		<div id="interest">
 			<b id="back">Interest: </b>
-			<label id="int_label"></label>
   			<div id="custom-handle" class="ui-slider-handle"></div>
+  			<input id="int_label" value="5" type="text"></input>
 		</div>
 	</div><br />
 	<!-- Years slider !-->
 	<div>
 		<div id="years">
 			<b id="back">Years: </b>
-			<label id="yrs_label"></label>
   			<div id="custom-handle" class="ui-slider-handle"></div>
+  			<input id="yrs_label" value="1" type="text"></input>
 		</div>
 	</div><br />
 	<!-- Amount Monthly !-->
